# OOP_cpp

./: Animal.h  CMakeLists.txt  Dog.cpp  Person.cpp  Student.cpp  Student.h  main.cpp
lab1/: Animal.cpp  Cat.cpp  Cat.h  Dog.h  Person.h  Student.cpp  Teacher.cpp  Teacher.h
lab10/: main.txt
lab11/: Buffer.h  BufferArr.cpp  BufferArr.h  BufferFile.cpp  BufferFile.h  Shop.cpp  Shop.h  Warehouse.cpp  Warehouse.h  main.txt  mainSKRYPT.txt
lab12/: CAr.cpp  CAr.h  main.txt  mainSKRYPT.txt
lab2/: Bufor.cpp  Bufor.h  Circle.cpp  Circle.h  Developer.cpp  Developer.h  Employee.cpp  Employee.h  Figure.cpp  Figure.h  MaxBufor.cpp  MaxBufor.h  MeanBufor.cpp  MeanBufor.h  Square.cpp  Square.h  TeamLeader.cpp  TeamLeader.h  main.cpp  main.txt
lab3/: Adding.h  Array.h  Student.h
lab4/: Citizen.cpp  Citizen.h  City.cpp  City.h  main.txt
lab5/: Dictionary.cpp  Dictionary.h  main.txt
lab6/: Contact.cpp  Contact.h  Contacts.cpp  Contacts.h  Person.cpp  Person.h  main.txt
lab9/: code.txt  dane.csv  main.txt
